Issue fixed spacing

--- a/src/assets/scss/components/_latest-reads-block.scss
+++ b/src/assets/scss/components/_latest-reads-block.scss
@@ -2,6 +2,9 @@
 	button{
 		display: none!important;
 	}
+	.fs {
+    font-size: 16px;
+	}
 	.latest-read{
 		h2{
 			font-size: 1.500rem;
